new version with submodules
Former-commit-id: cb7d1089472f7a61d9f872b704bb5cae31d1a3d7 [formerly fc80456d81b2387f625548685b0ccfdcad8849d5]
Former-commit-id: 1ced30334feaa8e858921a3a492c2cebdf63cfbc

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,56 @@
-node_modules
-fast-zkeyFiles
-ordinary-zkeyFiles
-ox-zkeyFiles
-rln-zkeyFiles
-g-rln-zkeyFiles
-fair-zkeyFiles
+# IDE
+.vscode
+.idea
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+
+# Parcel cache
+.parcel-cache
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Generate output
+dist
+docs
+gh-pages/*
+!gh-pages/CNAME
+
+# dotenv environment variables file
+.env
+.env.test
+
+# Optional npm cache directory
+.npm
+
+zkeyFiles
+coverage
+benchmarks
