--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
-        "module": "commonjs",
-        "target": "es5",
+        "strict": true,
+        "target": "ES5",
+        "module": "ES6",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "preserveConstEnums": true,
+        "skipLibCheck": true,
+        "declaration": true,
+        "allowSyntheticDefaultImports": true,
         "sourceMap": true,
         "experimentalDecorators": true,
         "alwaysStrict": true,
         "allowJs": true,
         "noImplicitAny": false,
-        "forceConsistentCasingInFileNames": true,
         "noUnusedLocals": false,
         "noUnusedParameters": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "strict": true,
-        "lib": [ "es2017" ]
-    },
-    "include": ["./src/**/*"],
-    "exclude": ["node_modules/**", "fast-zkeyFiles", "ordinary-zkeyFiles"]
+    }
 }
