--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "doc": "docs"
   },
   "scripts": {
+    "install": "npm run bootstrap && npm run build",
+    "bootstrap": "lerna bootstrap --no-ci",
+    "build": "lerna run build",
+    "build:watch": "lerna run --parallel build:watch -- -- --watch",
     "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
+    "test:prod": "npm run lint && npm test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
