package json fixes
Former-commit-id: 11eadd2c6e3589d3eea2ce27622b750204909a46 [formerly e45cd381d85d6f43a5be3c880929b12ac38cd54c]
Former-commit-id: a2b5302a0fbc35493a0a596efb3383fdf9b16e39

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "libsemaphore-modules",
-  "version": "1.0.0",
+  "name": "libsemaphore",
+  "version": "2.0.0",
   "description": "different modules for libsemaphore",
   "main": "index.js",
   "directories": {
@@ -19,15 +19,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akinovak/libsemaphore-modules.git"
+    "url": "git+https://github.com/appliedzkp/libsemaphore.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/akinovak/libsemaphore-modules/issues"
+    "url": "https://github.com/appliedzkp/libsemaphore/issues"
   },
-  "homepage": "https://github.com/akinovak/libsemaphore-modules#readme",
+  "homepage": "https://github.com/appliedzkp/libsemaphore#readme",
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
