--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "protocols",
+  "name": "@libsemaphore/protocols",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/protocols/src/index.js",
   "scripts": {
     "tsc": "npx tsc src/index.ts",
     "build": "npm run clean && tsc -p .",
