--- a/packages/protocols/tsconfig.json
+++ b/packages/protocols/tsconfig.json
@@ -1,21 +1,8 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "module": "commonjs",
-        "target": "es5",
-        "sourceMap": true,
-        "experimentalDecorators": true,
-        "alwaysStrict": true,
-        "allowJs": true,
-        "noImplicitAny": false,
-        "forceConsistentCasingInFileNames": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "strict": true,
-        "lib": [ "es2017" ]
-    },
-    "include": ["./src/**/*"],
-    "exclude": ["node_modules/**", "test/**"]
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+      "outDir": "./dist/",
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**", "tests/**"]
 }
