--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,5 @@ jobs:
                   node-version: 16.x
 
             - run: npm run lint
+            - run: npm ci
+            - run: npm test
