added rollup config
Former-commit-id: 8f00006ca801143c0ffbf01aa7870ee96e4be7c4 [formerly e5249e5b9c1ab266c0b9738e658a393066e68186]
Former-commit-id: f7117017ceafc8659d00ae329c917442e0e9b11e

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,6 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
+        "@typescript-eslint/no-explicit-any": "off",
     }
   }
