--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "dist/protocols/src/index.js",
   "types": "dist/types/index.d.ts",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.node.js"
+  },
   "scripts": {
     "tsc": "npx tsc src/index.ts",
-    "build": "npm run clean && tsc -p .",
-    "clean": "rimraf ./dist"
+    "build": "rimraf dist && rollup -c rollup.config.ts"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "name": "Andrija Novakovic",
+    "email": "akinovak@gmail.com"
+  },
+  "homepage": "https://github.com/appliedzkp/libsemaphore/protocols",
+  "license": "MIT",
   "dependencies": {
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
@@ -20,6 +27,9 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.8",
+    "rollup": "^2.58.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.6",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
