rollup config fix
Former-commit-id: ad7b0a8a332bf3d92bc60fc896b462f20a3055bf [formerly 6bd5732d1ce4e6158742b4c22587be9585d9507a]
Former-commit-id: 70835a667737397f898ab4e7e3abee365dc52a1d

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -2,8 +2,7 @@
   "name": "@libsem/identity",
   "version": "1.0.0",
   "description": "work with zk identites",
-  "main": "dist/identity/src/index.js",
-  "types": "dist/types/index.d.ts",
+  "main": "dist/identity/index.mjs",
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.node.js"
