--- a/packages/identity/tsconfig.json
+++ b/packages/identity/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist/",
+        "declarationDir": "./dist/types"
     },
-    "include": ["src/**/*"],
+    "include": ["src"],
     "exclude": ["node_modules/**", "tests/**"]
 }
