refactor: set up @libsem/types dep

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "work with zk identites",
   "main": "dist/identity/index.mjs",
+  "types": "dist/types/index.d.ts",
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.node.js"
@@ -18,20 +19,17 @@
     "email": "akinovak@gmail.com"
   },
   "license": "MIT",
-  "homepage": "https://github.com/appliedzkp/libsemaphore/identity",
+  "homepage": "https://github.com/appliedzkp/libsemaphore",
   "dependencies": {
     "bigint-conversion": "^2.1.12",
     "circomlibjs": "^0.0.8",
+    "@libsem/types": "../types",
     "crypto": "^1.0.1",
     "js-sha256": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^16.10.8",
     "rimraf": "^3.0.2",
-    "rollup": "^2.58.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "rollup": "^2.56.2",
+    "rollup-plugin-typescript2": "^0.30.0"
   }
 }
