--- a/packages/identity/tsconfig.json
+++ b/packages/identity/tsconfig.json
@@ -1,9 +1,7 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "declarationDir": "./dist/types"
-    },
-    "include": ["src"],
-    "exclude": ["node_modules/**", "tests/**"]
+  "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "./dist/types"
+  },
+  "include": ["src"]
 }
