--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -23,15 +23,13 @@
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
     "incrementalquintree": "^1.0.7",
+    "@libsem/types": "../types",
     "snarkjs": "^0.4.7"
   },
   "devDependencies": {
-    "@types/node": "^16.10.8",
     "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.6",
-    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
 }
