--- a/packages/protocols/tsconfig.json
+++ b/packages/protocols/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-      "outDir": "./dist/",
+    "outDir": "./dist/",
+    "declarationDir": "./dist/types"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/**", "tests/**"]
