--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
-    "compilerOptions": {
-        "strict": true,
-        "target": "ES5",
-        "module": "ES6",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "preserveConstEnums": true,
-        "skipLibCheck": true,
-        "declaration": true,
-        "allowSyntheticDefaultImports": true,
-        "sourceMap": true,
-        "experimentalDecorators": true,
-        "alwaysStrict": true,
-        "allowJs": true,
-        "noImplicitAny": false,
-        "noUnusedLocals": false,
-        "noUnusedParameters": true,
-    }
+  "compilerOptions": {
+    "strict": true,
+    "target": "ES5",
+    "module": "ES6",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "preserveConstEnums": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "alwaysStrict": true,
+    "allowJs": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": true
+  }
 }
