clean & publish scripts
Former-commit-id: 8e7eb16bbddc4e933581379fe30d1b809b4ed208 [formerly e47267c56b768c0e920777262a8ca0b86150ee84]
Former-commit-id: 3b95fcb62e9093b3dcd14ed1a8eb375141d5e8ee

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "publish": "lerna publish from-package",
+    "clean": "lerna clean"
   },
   "repository": {
     "type": "git",
