skip core and types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "different modules for libsemaphore",
   "main": "index.js",
+  "private": true,
   "directories": {
     "doc": "docs"
   },
