--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -21,9 +21,9 @@
   "license": "MIT",
   "homepage": "https://github.com/appliedzkp/libsemaphore",
   "dependencies": {
+    "@libsem/types": "^1.0.0",
     "bigint-conversion": "^2.1.12",
     "circomlibjs": "^0.0.8",
-    "@libsem/types": "../types",
     "crypto": "^1.0.1",
     "js-sha256": "^0.9.0"
   },
@@ -31,5 +31,6 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.56.2",
     "rollup-plugin-typescript2": "^0.30.0"
-  }
+  },
+  "gitHead": "0f54813412abadc7c5646a6a5ec8f3e2b6c1b5a7"
 }
