relative paths in package json
Former-commit-id: 548caf78207702727baba7f3ab6c60761851c59d [formerly 948243e7e9c7664e7259b5e1da31e268eeddcc37]
Former-commit-id: 832fd4c5d6a52c072760c8ee3201070ee92af7d4

--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@libsem/protocols",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/protocols/src/index.js",
   "types": "dist/types/index.d.ts",
@@ -29,7 +29,7 @@
     "snarkjs": "^0.4.7"
   },
   "devDependencies": {
-    "@libsem/types": "^1.0.0",
+    "@libsem/types": "../types",
     "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
