--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@libsem/identity",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "work with zk identites",
   "main": "dist/identity/index.mjs",
   "types": "dist/types/index.d.ts",
@@ -30,7 +30,7 @@
     "js-sha256": "^0.9.0"
   },
   "devDependencies": {
-    "@libsem/types": "^1.0.0",
+    "@libsem/types": "../types",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.2",
     "rollup-plugin-typescript2": "^0.30.0"
