fix imports and exports
Former-commit-id: ee5d8ebaad0430b8f4391affa56fc0909a9fda5e [formerly 632e545d1a0ce1e7a97f20150facbb4ee102b86f]
Former-commit-id: 6b080044c949469c975539efbf401d7947270f80

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@libsem/identity",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "work with zk identites",
-  "main": "dist/identity/index.mjs",
+  "main": "dist/index.node.js",
   "types": "dist/types/index.d.ts",
   "publishConfig": {
     "access": "public"
