--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@libsem/protocols",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "main": "dist/protocols/src/index.js",
+  "main": "dist/index.node.js",
   "types": "dist/types/index.d.ts",
   "publishConfig": {
     "access": "public"
