--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "tsc": "npx tsc src/index.ts",
     "build": "npm run clean && tsc -p .",
@@ -15,5 +18,6 @@
   "devDependencies": {
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0"
-  }
+  },
+  "gitHead": "7cab1c709124f10610b04995603086d29a7eb18b"
 }
