--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -24,13 +24,13 @@
     "access": "public"
   },
   "dependencies": {
+    "@libsem/types": "^1.0.0",
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
     "incrementalquintree": "^1.0.7",
     "snarkjs": "^0.4.7"
   },
   "devDependencies": {
-    "@libsem/types": "../types",
     "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
