chore: update package descriptions
Former-commit-id: 30b97d78d6d4398ffb0310cc5dc3632b766fba9e [formerly 26d8905c520fca15ebcd6d36ee9c21ce9fc8cbbf]
Former-commit-id: 7c053e184820f2f2cc5ce718ed141cccbe17d50b

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "libsem",
   "version": "2.0.0",
-  "description": "different modules for libsemaphore",
+  "description": "A monorepo of JavaScript libraries for Semaphore.",
   "main": "index.js",
   "private": true,
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
     "install": "npm run bootstrap && npm run build",
     "bootstrap": "lerna bootstrap --no-ci",
