--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@libsem/types",
   "version": "1.0.0",
-  "description": "",
+  "description": "Common type definitions for Semaphore modules.",
   "main": "src/index.ts",
   "types": "dist/index.d.ts",
   "publishConfig": {
