--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@typescript-eslint/parser": "^5.1.0",
     "bigint-conversion": "^2.1.12",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "jest": "^27.2.5",
     "jest-config": "^27.2.5",
     "lerna": "^4.0.0",
+    "prettier": "^2.3.2",
     "ts-jest": "^27.0.6",
     "ts-node": "^10.2.0",
     "tslib": "^2.3.1",
