--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:prod": "npm run lint && npm test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "publish": "lerna publish from-package",
+    "publish:fp": "lerna publish from-package",
     "clean": "lerna clean"
   },
   "repository": {
