--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/appliedzkp/libsemaphore#readme",
   "devDependencies": {
-    "@types/node": "^16.10.8",
     "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.8",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "bigint-conversion": "^2.1.12",
@@ -41,8 +41,11 @@
     "lerna": "^4.0.0",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.6",
-    "ts-node": "^10.2.0",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@libsem/types": "^1.0.0"
   }
 }
