skip tests that require compiled circuits
Former-commit-id: 09f81fc13f5fd3ec2b6ef8fa278a23a20de7c0fc [formerly faf535d093f69b50d7faf56864c308eb089b757d]
Former-commit-id: 6f8717fad7bf4cbc1e8cc62328c88a93f7451959

--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -12,8 +12,7 @@
   },
   "scripts": {
     "tsc": "npx tsc src/index.ts",
-    "build": "rimraf dist && rollup -c rollup.config.ts",
-    "proof": "ts-node src/new.ts"
+    "build": "rimraf dist && rollup -c rollup.config.ts"
   },
   "keywords": [],
   "author": {
