witness generator as es6

--- a/packages/protocols/tsconfig.json
+++ b/packages/protocols/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "declarationDir": "./dist/types",
+    "composite": true,
     "checkJs": false,
   },
   "include": ["src/**/*", "../../build"],
