--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
   },
   "homepage": "https://github.com/appliedzkp/libsemaphore#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.8",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "babel-jest": "^27.3.1",
     "bigint-conversion": "^2.1.12",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -40,7 +44,7 @@
     "jest-config": "^27.2.5",
     "lerna": "^4.0.0",
     "prettier": "^2.3.2",
-    "ts-jest": "^27.0.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4"
