--- a/packages/protocols/tsconfig.json
+++ b/packages/protocols/tsconfig.json
@@ -5,6 +5,7 @@
     "declarationDir": "./dist/types",
     "composite": true,
     "checkJs": false,
+    "esModuleInterop": true,
   },
   "include": ["src/**/*", "../../build"],
   "exclude": ["node_modules/**", "tests/**"]
