fix: multipart secret updates & lint issues
Former-commit-id: 03b9e0c134ec1f4ca80c433d9e4110542d5d8041 [formerly f6c970d916472d9965e5452ac1f466693aba1f0f]
Former-commit-id: f2541c7ba4c1c009a70d67c0eff60ec2069e3fd7

--- a/packages/identity/tsconfig.json
+++ b/packages/identity/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/types",
+    
   },
   "include": ["src"]
 }
