fix: identity tsconfig update
Former-commit-id: 7d1720fc9a3df9a23836640d339c79cd3a3ff270 [formerly 39c75925f1d3a02171d390757c61f875aa785ba3] [formerly 186920164d4c1918e5a28623c397ea5bb2a35e75 [formerly 7cdf004cf7703806b87080cce4495f189de1d7cb]]
Former-commit-id: 39ef0b0d68f0233cbc2ea8e3080aaf7d6dd10e42 [formerly c506e537392b417625a921b4e0e8949549a7ec4e]
Former-commit-id: df7734044cb4e1749ea7328258db6b3a1dbb115e

--- a/packages/identity/tsconfig.json
+++ b/packages/identity/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "./dist/types",
-    
+    "composite": true,
+    "esModuleInterop": true,
   },
   "include": ["src"]
 }
