--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@libsem/protocols",
+  "name": "@zkit/protocols",
   "version": "1.0.27",
-  "description": "Client library for generating and verifying Semaphore & Rln ZK proofs.",
+  "description": "Client library for generating and verifying Semaphore & RLN ZK proofs.",
+  "license": "MIT",
   "main": "dist/index.node.js",
   "types": "dist/types/index.d.ts",
-  "repository": "https://github.com/appliedzkp/libsemaphore",
-  "homepage": "https://github.com/appliedzkp/libsemaphore",
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.node.js"
   },
+  "repository": "https://github.com/appliedzkp/zkit",
+  "homepage": "https://github.com/appliedzkp/zkit/tree/main/packages/protocols",
   "scripts": {
     "tsc": "npx tsc src/index.ts",
     "build": "rimraf dist && rollup -c rollup.config.ts"
@@ -19,12 +20,11 @@
     "name": "Andrija Novakovic",
     "email": "akinovak@gmail.com"
   },
-  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@libsem/types": "^1.0.9",
+    "@zkit/types": "^1.0.9",
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
     "incrementalquintree": "^1.0.7",
@@ -35,6 +35,5 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.4.4"
-  },
-  "gitHead": "e1cbf100499b8bc4c4434ef485c1ccc6291672ae"
+  }
 }
