--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "alwaysStrict": true,
-    "allowJs": true,
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": true
+    "declarationDir": "types",
+    "typeRoots": ["node_modules/@types", "types"]
   }
 }
