build: update rollup confs
Former-commit-id: 7940c73dfe59f452150a61375e0e3567b37da1a6 [formerly 932cc2e903c12ff32216ce3f828733e1b6efa939] [formerly 0131ed42f15380b9c22c06d3c06e1c0aca804caa [formerly df907f5fa897f1abf77324fb3392523e1ce50fad]]
Former-commit-id: 2d232ca5ce11485eeaa82e69bf01ca96b643e6f6 [formerly cde1edc81d480937c278cabbfc5c5744db88df9a]
Former-commit-id: 733348f801fa20e18bb30287a03a8e98f00de681

--- a/packages/protocols/jest.config.json
+++ b/packages/protocols/jest.config.json
@@ -1,11 +1,11 @@
 {
   "displayName": "protocols",
-  "globals": {
-    "extensionsToTreatAsEsm": [".ts", ".js"],
-    "ts-jest": {
-      "useESM": true
-    }
+  "transform": {
+    "\\.(ts|tsx)": "ts-jest"
   },
-  "preset": "ts-jest/presets/js-with-ts-esm",
-  "transformIgnorePatterns": ["node_modules/(?!(module-that-needs-to-be-transformed)/)"]
+  "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+  "moduleFileExtensions": ["ts", "js"],
+  "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
+  "collectCoverageFrom": ["src/**/*.{js,ts}"],
+  "preset": "ts-jest/presets/js-with-ts-esm"
 }
