--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -12,9 +12,9 @@
   "repository": "https://github.com/appliedzkp/zk-kit",
   "homepage": "https://github.com/appliedzkp/zk-kit/tree/main/packages/identity",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "build:watch": "rollup -c rollup.config.ts -w",
-    "build": "rimraf dist && rollup -c rollup.config.ts"
+    "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
+    "prepublishOnly": "yarn build"
   },
   "keywords": [],
   "author": {
@@ -24,14 +24,14 @@
   "publishConfig": {
     "access": "public"
   },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0"
+  },
   "dependencies": {
     "@zk-kit/types": "^1.0.9",
     "bigint-conversion": "^2.1.12",
     "circomlibjs": "^0.0.8",
     "crypto": "^1.0.1",
     "js-sha256": "^0.9.0"
-  },
-  "devDependencies": {
-    "rollup-plugin-typescript2": "^0.30.0"
   }
 }
