--- a/packages/protocols/package.json
+++ b/packages/protocols/package.json
@@ -12,8 +12,9 @@
   "repository": "https://github.com/appliedzkp/zk-kit",
   "homepage": "https://github.com/appliedzkp/zk-kit/tree/main/packages/protocols",
   "scripts": {
-    "tsc": "npx tsc src/index.ts",
-    "build": "rimraf dist && rollup -c rollup.config.ts"
+    "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
+    "prepublishOnly": "yarn build"
   },
   "keywords": [],
   "author": {
@@ -23,15 +24,14 @@
   "publishConfig": {
     "access": "public"
   },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.0"
+  },
   "dependencies": {
     "@zk-kit/types": "^1.0.9",
     "circomlibjs": "^0.0.8",
     "ethers": "^5.4.7",
     "incrementalquintree": "^1.0.7",
     "snarkjs": "^0.4.10"
-  },
-  "devDependencies": {
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0"
   }
 }
