chore: add prettier npm scripts
Former-commit-id: f92ba50f7e9d327ae63aa584548e1189cba9c3b1 [formerly bd488d5391da0573dbc8678d6b519d7290a7ea0d] [formerly 6205b06f703b73a5090cf7905969ffa5c702fa1f [formerly 4b4df1a0171191c33498054c88428dc0a7d70bd9]]
Former-commit-id: 47b65d6f343a331f3096ee8a317e51a2ffbd134e [formerly 39199ebf8bdd00a3ff90e6265d337be2fa9ad5a5]
Former-commit-id: e50e6ebeb9d1a3df001a6fe9850c73ff6c07f7e6

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:prod": "npm run lint && npm test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prettier": "prettier -c .",
+    "prettier:fix": "prettier -w .",
     "publish:fp": "lerna publish from-package",
     "clean": "lerna clean"
   },
