--- a/package.json
+++ b/package.json
@@ -19,13 +19,24 @@
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -w .",
     "publish:fp": "lerna publish from-package",
-    "clean": "lerna clean"
+    "clean": "lerna clean",
+    "commit": "cz",
+    "precommit": "lint-staged"
   },
-  "keywords": [],
+  "keywords": [
+    "javascript",
+    "typescript",
+    "monorepo",
+    "zero-knowledge",
+    "zk-snarks",
+    "circom"
+  ],
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.8",
@@ -33,11 +44,14 @@
     "@typescript-eslint/parser": "^5.1.0",
     "babel-jest": "^27.3.1",
     "bigint-conversion": "^2.1.12",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.2.5",
     "jest-config": "^27.2.5",
     "lerna": "^4.0.0",
+    "lint-staged": "^12.1.7",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
@@ -45,5 +59,10 @@
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
