chore: remove useless jest conf
Former-commit-id: e24f9e1f86e15a7e2a6a1d0366ee06648d4c29bd [formerly b5daeb478cb7dd4f36d960a738386432344f0d8e] [formerly 64d31f3bcab655088beaed0750b7023850a7f1ae [formerly e5d2c1e401c0be1be03e00184df5d583f42b2ad8]]
Former-commit-id: f0733553f8afe2be6b228c96f90486ca4395b7b9 [formerly 0a365107575eedef19f7a71548e0cc72bb0300d6]
Former-commit-id: 5976edffa35e93d0f9cd9db3c1a994018904e7b4

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,6 @@
 {
   "projects": ["<rootDir>/packages/*"],
+  "collectCoverageFrom": ["<rootDir>/src/**/*.ts"],
   "coverageThreshold": {
     "global": {
       "branches": 20,
