--- a/packages/protocols/jest.config.json
+++ b/packages/protocols/jest.config.json
@@ -1,11 +1,7 @@
 {
   "displayName": "protocols",
   "transform": {
-    "\\.(ts|tsx)": "ts-jest"
+    "\\.ts$": "ts-jest"
   },
-  "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-  "moduleFileExtensions": ["ts", "js"],
-  "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
-  "collectCoverageFrom": ["src/**/*.{js,ts}"],
   "preset": "ts-jest/presets/js-with-ts-esm"
 }
