--- a/packages/merkle-tree/jest.config.json
+++ b/packages/merkle-tree/jest.config.json
@@ -1,10 +1,6 @@
 {
   "displayName": "merkle-tree",
   "transform": {
-    "\\.(ts|tsx)": "ts-jest"
-  },
-  "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-  "moduleFileExtensions": ["ts", "js"],
-  "coveragePathIgnorePatterns": ["/node_modules/", "/test/"],
-  "collectCoverageFrom": ["src/**/*.{js,ts}"]
+    "\\.ts$": "ts-jest"
+  }
 }
