refactor: move all types in root folder
Former-commit-id: c57ec10396faf86f2d47166391e2a459d6cbc883 [formerly a30ad3317347db7d1c614c8a95b89945f8d78511] [formerly 0bb50444355ffd51dd10d515a8c7d53c0738036c [formerly a50e6a398193e9c9876e9e0112bc0798b2c83910]]
Former-commit-id: 43020e533b9aafc15a65cc9c73fa3ec99e81ac5e [formerly 8bda116571d4a86bbd4e5cd2c97231aa3f6ae4dc]
Former-commit-id: 4bf1710e9eedae2734df87dd86c9920e1b4aa7f2

--- a/packages/protocols/tsconfig.json
+++ b/packages/protocols/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["src", "test", "types", "rollup.config.ts"]
+  "include": ["src", "tests", "rollup.config.ts"]
 }
