--- a/packages/merkle-tree/tsconfig.json
+++ b/packages/merkle-tree/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "test", "types", "rollup.config.ts"]
+  "include": ["src", "tests", "rollup.config.ts"]
 }
