--- a/packages/merkle-tree/package.json
+++ b/packages/merkle-tree/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
     "circomlibjs": "^0.0.8",
+    "incrementalquintree": "^1.0.9",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
