refactor: update pkg name

--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -26,6 +26,7 @@
   },
   "license": "MIT",
   "scripts": {
+    "benchmark": "node -r ts-node/register benchmarks/index.ts",
     "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
     "prepublishOnly": "yarn build"
