chore: add ts-node compiler options
Former-commit-id: 59b9aabd853d830ed5a7d3e7cc395692776777d2 [formerly 0b665220882419c7d3d8b7147f6aff5f9d799752] [formerly 9f0d6c5fb46cc6374ecb60dbc1c4830108c47061 [formerly 5086f2c5d086d2b0a5843602d3319da1ff810978]]
Former-commit-id: 84b06f44cc5ad9779ab36a53e8fee6797df759ac [formerly 453863d01f33361281ecf00636c01a7977eb2cad]
Former-commit-id: b5d71d5097e5ed5bf3f1ab1422b42e819ae81913

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,11 @@
     "paths": {
       "@zk-kit/types": ["types/zk-kit"]
     }
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "target": "esnext",
+      "module": "commonjs"
+    }
   }
 }
