refactor: update pkg name
Former-commit-id: 5d9ec2126b0e441961197b0d392d7ec7c1faa535 [formerly 518a8f2f4630e5b6bae3e405efd735b06b166263] [formerly 343fb766602e77305f5b167edd5930d562eca3b5 [formerly 902b91e1be7206bb23460db64f299f35451224c8]]
Former-commit-id: ed381c347fb02dde264b2af1862968c7e4cc4b56 [formerly c8737b21e3476055c81f308d844b2d52368584da]
Former-commit-id: 6cddf451599815380c9bcc5ce9c61532fca90a18

--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zk-kit/merkle-tree",
+  "name": "@zk-kit/incremental-merkle-tree",
   "version": "0.1.0",
-  "description": "Merkle tree implementation in TypeScript.",
+  "description": "Incremental Merkle tree implementation in TypeScript.",
   "iife": "dist/index.js",
   "unpkg": "dist/index.min.js",
   "jsdelivr": "dist/index.min.js",
@@ -18,19 +18,13 @@
     "README.md"
   ],
   "repository": "git@github.com:appliedzkp/zk-kit.git",
-  "homepage": "https://github.com/appliedzkp/zk-kit/tree/main/packages/merkle-tree",
+  "homepage": "https://github.com/appliedzkp/zk-kit/tree/main/packages/incremental-merkle-tree",
   "author": {
     "name": "Omar Desogus",
     "email": "me@cedoor.dev",
     "url": "https://cedoor.dev"
   },
   "license": "MIT",
-  "scripts": {
-    "benchmark": "node -r ts-node/register benchmarks/index.ts",
-    "build:watch": "rollup -c rollup.config.ts -w --configPlugin typescript",
-    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin typescript",
-    "prepublishOnly": "yarn build"
-  },
   "publishConfig": {
     "access": "public"
   },
