--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "bugs": "https://github.com/appliedzkp/zk-kit/issues",
   "private": true,
   "scripts": {
-    "install": "npm run bootstrap && npm run build",
-    "bootstrap": "lerna bootstrap --no-ci",
+    "install": "yarn bootstrap && yarn build",
+    "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "build:watch": "lerna run --parallel build:watch -- -- --watch",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm test",
+    "test:prod": "yarn lint && yarn test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prettier": "prettier -c .",
@@ -32,6 +32,9 @@
     "circom"
   ],
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -39,6 +42,7 @@
     "@types/node": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "babel-jest": "^27.4.6",
     "benny": "^3.7.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
@@ -51,7 +55,6 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.64.0",
-    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4"
