--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           node-version: 16.x
 
-      - run: npm ci
-      - run: npm run test:prod
+      - run: yarn --frozen-lockfile
+      - run: yarn test:prod
