build: add rollup plugin to clean comments
Former-commit-id: 0843cf0650b16812a46e0d566fc2141e6b7de555 [formerly e53320e15e47c094358ab1ea717513bf33a2b5dd] [formerly fd0ccf48c069a8dda221a3b52a0fbeed25dd45a4 [formerly fd8eddd999728f20cff32dbb30df16e5017cc3bd]]
Former-commit-id: b3314a5801f06a64c7387527570319c67f22a48b [formerly 0f6f00eecd1dfee55b282ae52c2611f8cf294881]
Former-commit-id: 6b3247c900b257f54e0e9e8e0d854dc05389aae3

--- a/packages/identity/package.json
+++ b/packages/identity/package.json
@@ -25,7 +25,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.0"
+    "@rollup/plugin-typescript": "^8.3.0",
+    "rollup-plugin-cleanup": "^3.2.1"
   },
   "dependencies": {
     "bigint-conversion": "^2.1.12",
