--- a/packages/incremental-merkle-tree/package.json
+++ b/packages/incremental-merkle-tree/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "circomlibjs": "^0.0.8",
     "incrementalquintree": "^1.0.9",
+    "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
